smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/defaults/unions-do-not-support-defaults.smithy
// Parse error at line 7, column 17 near `= `
$version: "2.0"

namespace com.foo

union Foo {
    bar: String = "hi"
}
